--- a/public/css/main.css
+++ b/public/css/main.css
@@ -310,6 +310,7 @@ button:hover {
   top: 0;
   left: 0;
   opacity: 0.3;
+  z-index: -1;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -549,6 +550,7 @@ height: 100%;
 nav.up .nav-overlay {
   opacity: 1;
   pointer-events: all;
+  z-index:2;
 }
 
 .nav-control {
@@ -1273,4 +1275,52 @@ h1 {
   nav a .tooltip::after {
     content: none;
   }
+}
+
+/*PLAYER*/
+video{
+    z-index: -1;
+    width:100vw;
+    height: 100vh;
+}
+
+.player .seek-bar
+{
+    display: inline-block;
+    opacity: 1;
+    position: absolute;
+    bottom: 40px;
+    width:80%;
+    left:50%;
+    transform: translateX(-50%);
+    height:20px;
+    background-color:lightblue;
+    z-index: 1;
+    transition:all 0.5s ease;
+}
+
+.player .seek-bar .progress-bar
+{
+    width:100%;
+    height:100%;
+    background-color:cadetblue;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin:0;
+    -ms-transform-origin:0;
+    transform-origin:0;
+    -webkit-transition:-webkit-transform 0.1s linear;
+    transition:all 0.1s linear;
+}
+
+.player .seek-bar.hide
+{
+    display: none;
+    opacity:0;
+}
+.player .seek-bar.hidep
+{
+    display: none;
+    opacity:0;
 }
