--- a/public/css/main.css
+++ b/public/css/main.css
@@ -704,7 +704,25 @@ nav a:hover .tooltip {
   padding:40px;
   font-size:0;
 }
-
+.container.fs.model--textimgs section{
+  max-width: 940px;
+  min-height: 100%;
+  margin-left: 12%;
+  background: #FEFEFE;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 0 100px;
+  box-sizing: border-box;
+}
 
 /* MODEL TEXT */
 .container.fs.model--text,
@@ -716,7 +734,6 @@ nav a:hover .tooltip {
 }
 
 .container.fs.model--text section,
-.container.fs.model--textimgs section,
 .container.fs.model--textchat section {
   max-width: 940px;
   min-height: 100%;
