bug player audio

--- a/public/partials/slide2.html
+++ b/public/partials/slide2.html
@@ -1,6 +1,7 @@
 <div class="container fs slide1 model--video">
     <div class="player">
         <video
+        class="video"
         ng-src="{{trustSrc(data.videolink)}}"
         autoplay
         preload="auto"
