--- a/public/partials/slide6.html
+++ b/public/partials/slide6.html
@@ -2,10 +2,8 @@
   <section>
     <p class="ft--avenir ft--grey__light" ng-class="{'ft--palatino': paragraph.quote, 'ft--grey__light': paragraph.quote}" ng-repeat="paragraph in data.paragraphs">{{paragraph.text}}</p>
     <div class="content">
-   	  <div ng-repeat="audio in data.audios">
-   	  	<p>{{ audio.name }}</p>
 
-		<video width="600" height="200" src="http://download1517.mediafire.com/2a4qdh248n1g/1kkmuy49h21t5ao/debutnotecorrige3.avi" class="waveform" id="{{ audio.name }}"></video>
+        <div class="waveform" id="aurelien"></div>
     </div>
     <button class="ft--avenir ft--white" ui-sref="goto({chapter: {{data.nextChapter}}, slide: {{data.nextSlide}}})">Passer à la suite</button>
   </section>
