audio template dynamic

--- a/public/partials/slide6.html
+++ b/public/partials/slide6.html
@@ -2,8 +2,10 @@
   <section>
     <p class="ft--avenir ft--grey__light" ng-class="{'ft--palatino': paragraph.quote, 'ft--grey__light': paragraph.quote}" ng-repeat="paragraph in data.paragraphs">{{paragraph.text}}</p>
     <div class="content">
-
-        <div class="waveform" id="aurelien"></div>
+        <div ng-repeat="(key,value) in data.audios">
+            <div class="waveform" ng-attr-id="{{value.name}}"></div>
+            <button class="ft--avenir__bold ft--white" ng-click="wave[key].playPause()">Play/Pause</button>
+        </div>
     </div>
     <button class="ft--avenir ft--white" ui-sref="goto({chapter: {{data.nextChapter}}, slide: {{data.nextSlide}}})">Passer à la suite</button>
   </section>
