--- a/public/partials/slide2.html
+++ b/public/partials/slide2.html
@@ -1,11 +1,6 @@
 <div class="container fs slide1 model--video">
     <div class="player">
-        <video
-        class="video"
-        ng-src="{{trustSrc(data.videolink)}}"
-        autoplay
-        preload="auto"
-        ></video>
+        <video class="video" ng-src="{{trustSrc(data.videolink)}}" autoplay preload="auto"></video>
         <div class="seek-bar">
             <div class="progress-bar"></div>
         </div>
