--- a/public/partials/slide4.html
+++ b/public/partials/slide4.html
@@ -1,31 +1,11 @@
 <div class="container fs model--textchat" style="background: url(https://unsplash.it/1440/900) no-repeat;">
-  <section>
-    <h1 class="ft--avenir__bold ft--grey__dark">{{data.title}}</h1>
-    <div class="chat">
-      <div class="message" ng-class="{'right': paragraph.right, 'left':paragraph.left}" ng-repeat="paragraph in data.paragraphs">
-        <div class="message-text">{{paragraph.text}}</div>
-      </div>
-      <!-- <div class="message right">
-        <div class="message-text">Je trouve que ce n'est absolument pas fiable on ne peut pas prétendre fonder une relation amoureuse sérieuse quand à la base on connaît la personne seulement sur son physique et quelques infos personnelles qui n'ont pas de garantie d'être vraies!</div>
-      </div>
-      <div class="message left">
-        <div class="message-text">C'est plutôt triste d’en arriver là. Mais c’est certainement intrinsèquement lié à notre société actuelle toujours connectée</div>
-      </div>
-      <div class="message left">
-        <div class="message-text">Le plus : il y en a pour tous les goûts - Le moins : Les applications et sites de rencontres ont l'art et la manière de rendre ses utilisateurs inintéressants aux yeux des autres.</div>
-      </div>
-      <div class="message right">
-        <div class="message-text">Pour moi, elles enlèvent le "charme" d'une rencontre naturelle.</div>
-      </div> -->
-    </div>
-    <button class="ft--avenir__bold ft--white">Passer à la suite</button>
-  </section>
+    <section>
+        <h1 class="ft--avenir__bold ft--grey__dark">{{data.title}}</h1>
+        <div class="chat">
+            <div class="message" ng-class="{'right': paragraph.right, 'left':paragraph.left}" ng-repeat="paragraph in data.paragraphs">
+                <div class="message-text">{{paragraph.text}}</div>
+            </div>
+        </div>
+        <button class="ft--avenir__bold ft--white" ui-sref="goto({chapter: {{data.nextChapter}}, slide: {{data.nextSlide}}})">Passer à la suite</button>
+    </section>
 </div>
-
-<nav>
-  <div class="nav-overlay"></div>
-  <div class="nav-control"></div>
-  <a href="#" class="active"><div class="tooltip ft--avenir ft--white">Part 1</div></a>
-  <a href="#"><div class="tooltip ft--avenir ft--white">Part 2kvljvkvkhv</div></a>
-  <a href="#"><div class="tooltip ft--avenir ft--white">Part 3</div></a>
-</nav>
