dynamic response on a slide

--- a/public/partials/signup2.html
+++ b/public/partials/signup2.html
@@ -10,6 +10,11 @@
             <input ng-model="form.user.status" required class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" value="celibataire">Célibataire</div>
         <div>
             <input ng-model="form.user.status" required class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" value="encouple">En couple</div>
+        <label for="status" class="ft--avenir__bold ft--grey__dark">Avez-vous déjà utilisé une application de rencontre ?</label>
+        <div>
+            <input ng-model="form.user.appli" required class="ft--avenir ft--grey__light" type="radio" type="text" name="appli" id="appli" value="oui">Oui</div>
+        <div>
+            <input ng-model="form.user.appli" required class="ft--avenir ft--grey__light" type="radio" type="text" name="appli" id="appli" value="non">Non</div>
         <button class="ft--avenir__bold ft--white" type="submit">Confirmer</button>
         <span class="conditions-info ft--avenir ft--grey__dark">En continuant, vous acceptez nos <a href="#" class="ft--red">conditions d’utilisation</a> et Politique de Confidentialité</span>
     </form>
