--- a/public/css/main.css
+++ b/public/css/main.css
@@ -564,7 +564,7 @@ nav.up .nav-overlay {
   cursor: pointer;
   -webkit-transition: .3s ease;
   transition: .3s ease;
-  z-index: 1;
+  z-index: 2;
 }
 nav .nav-control:hover {
   -webkit-transform: translate3d(0, -9px, 0);
@@ -607,6 +607,7 @@ nav a {
   border-radius: 100%;
   background: #FEFEFE;
   margin-right: 100px;
+  cursor: pointer;
 }
 nav a:last-of-type {
   margin-right: 0;
@@ -692,16 +693,12 @@ nav a:hover .tooltip {
   transform: translateY(0px);
 }
 
-.waveform {
-  width:100%;
-  height:300px;
-  overflow-x:hidden;
-}
 
 /* MODEL AUDIOS */
 
 
 .container.fs.model--audios section{
+  width: auto;
   max-width: 940px;
   min-height: 100%;
   margin-left: 12%;
@@ -720,6 +717,45 @@ nav a:hover .tooltip {
   padding: 0 100px;
   box-sizing: border-box;
 }
+
+.waveform {
+  width:100%;
+  height:150px;
+  overflow-x:hidden;
+}
+
+.model--audios section > button {
+  background: #FF6A6A;
+  color: white;
+  border-radius: 15px;
+  width: 300px;
+  height: 50px;
+  font-size: 18px;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+}
+.model--audios section > button:focus,
+.model--audios section > button:hover {
+  background: #F54C4C;
+}
+
+.model--audios .content > div {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.model--audios .content button {
+  color: white;
+  font-size: 18px;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+}
+
+.model--audios .content button:hover,
+.model--audios .content button.active {
+  background: rgb(164, 163, 163);
+}
+
 
 
 /* MODEL TEXTIMGS */
