--- a/public/partials/slide4.html
+++ b/public/partials/slide4.html
@@ -1,4 +1,4 @@
-<div class="container fs model--textchat" style="background: url(https://unsplash.it/1440/900) no-repeat;">
+<div class="container fs model--textchat" style="background: url({{ data.imagelink }}) no-repeat;">
     <section>
         <h1 class="ft--avenir__bold ft--grey__dark">{{data.title}}</h1>
         <div class="chat">
